# reinforsment_learning

./: .gitignore  DQN_Lunar_lander.ipynb  Dockerfile  MARIO.ipynb  NN.ipynb  REINFORCE_CartPole-v0.ipynb  VAE.ipynb  VIP.ipynb  _vizdoom.ini  checkpoint_car_pole.pth  env.py  h.py  load_weights_to_s3.sh  mlflow.ipynb  model_summary.txt  pyproject.toml  requirements.txt  tesl.ipynb  test.ipynb  train.py
ENV/: MDN-RNN.ipynb  env.py
IsaacLab/: TEST.ipynb  env.py  tests_with_modules.py
IsaacLab/source/extensions/omni.isaac.lab/omni/isaac/lab/markers/config/: __init__.py
IsaacLab/source/extensions/omni.isaac.lab_assets/omni/isaac/lab_assets/: franka.py  universal_robots.py
MDN-RNN/: MDN-RNN.ipynb
MDN_RNN/: MDN-RNN.ipynb  Z.npy  model.py
MDN_RNN/VAE/: data.py  dataP_MARIO.ipynb  model.py  utils.py
MDN_RNN/VAE/weights/: model_summary.txt
USD/: first_test.usd  kilo.usd  robo.usd  some_table.usd  victor.usd  wisky.usd
VAE/: Dockerfile  VAE.ipynb  data.py  dataP_MARIO.ipynb  data_P_DROID.ipynb  datapreparation_MARIO.py  load.py  load_config.py  test.ipynb  train.py  train_utils.py  utils.py
VAE/.ipynb_checkpoints/: test-checkpoint.ipynb
environment/: VAE  env.py  env_car_RACING.py  env_robot.py
mlruns/0/: meta.yaml
mlruns/867600587909578385/: meta.yaml
