[tool.poetry]
name = "reinforsment-learning"
version = "0.1.0"
description = ""
authors = ["Qwest1204 <myPCwithUbuntu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.14"
numpy = "1.24.1"
nes-py = "^8.2.1"
gymnasium = {extras = ["all"], version = "^0.29.1"}
torch = { version = "^2.4.0+cu118", source="torch"}
torchvision = { version = "0.19+cu118", source="torch"}
gym-super-mario-bros = "^7.4.0"
torchrl = "^0.5.0"
tensordict = "^0.5.0"
notebook = "^7.2.2"
gym = "^0.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"