[tool.poetry]
name = "reinforsment-learning"
version = "0.1.0"
description = ""
authors = ["Qwest1204 <myPCwithUbuntu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.14"
nes-py = "^8.2.1"
gymnasium = {extras = ["all"], version = "^0.29.1"}
torch = { version = "^2.4.0+cu118", source="torch"}
torchvision = { version = "0.19+cu118", source="torch"}
gym-super-mario-bros = "^7.4.0"
torchrl = "^0.5.0"
tensordict = "^0.5.0"
notebook = "^7.2.2"
gym = "^0.26.2"
av = "11.0.0"
pandas = "^2.2.3"
opencv-python = "^4.10.0.84"
progress = "^1.6"
plotly = "^5.24.1"
mlflow = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"