[tool.poetry]
name = "reinforsment-learning"
version = "0.1.0"
description = ""
authors = ["Qwest1204 <myPCwithUbuntu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchmetrics = "^1.5.1"
torchinfo = "^1.8.0"
mlflow = "^2.17.2"
notebook = "^7.2.2"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
